--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/report.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/report.html
@@ -23,20 +23,20 @@
                         <div class="col-sm-1"></div>
                         <div class="col-sm-3">
                           <div class="input-group">
-                          <span class="input-group-text">From:</span>
+                          <span class="input-group-text" style="font-weight: bold; ">From:</span>
                           <input type="text" class="form-control" id="from" placeholder="mm/dd/yyyy" aria-label="mm/dd/yyyy" name="from">
                           </div>
                         </div>
                         <div class="col-sm-1"></div>
                         <div class="col-sm-3">
                           <div class="input-group">
-                          <span class="input-group-text">To:</span>
+                          <span class="input-group-text" style="font-weight: bold; ">To:</span>
                           <input type="text" class="form-control" id="to" placeholder="mm/dd/yyyy" aria-label="mm/dd/yyyy" name="to">
                           </div>
                         </div>
-                        <div class="col-sm-1"></div>
-                        <div class="col-sm-3">
-                          <button class="btn btn-secondary" type="submit">
+                        <!-- <div class="col-sm-1"></div> -->
+                        <div class="col-sm-4">
+                          <button class="btn btn-secondary" id="submit_button" style="width: 100%" type="submit">
                           <i class="fas fa-search"></i>
                           Find</button></div>
                       </div>
