--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/account-creation/create-patient-record.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/account-creation/create-patient-record.html
@@ -47,7 +47,7 @@
                     <td class="table-warning">Date of Birth:<span style="color: red;">*</span></td>
                     <td class="table-light" colspan="3">{{ form.bday }}</td>
                     <td class="table-warning">Age:<span style="color: red;">*</span></td>
-                    <td class="table-light" colspan="3">{{ form.age }}</td>
+                    <td class="table-light" colspan="3"></td>
                   </tr>
                   <tr>
                     <td class="table-warning"><b>CONTACT #</b></td>
