--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/patient-profile.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/patient-profile.html
@@ -21,7 +21,7 @@
                 <table class="table table-bordered">
                   <tr>
                     <td class="table-warning">Account Username:</td>
-                    <td class="table-warning">{{ record.user.username|upper }}</td>
+                    <td class="table-warning">{{ record.user.username}}</td>
                     <td class="table-warning" colspan="8"></td>
                   </tr>
                   <tr>
