--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/reminder.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/reminder.html
@@ -1,6 +1,7 @@
 {% extends 'vaccinerecordapp/navbar.html' %} 
 {% block content %} {% load static %} {% load auth_extras %}
 
+
 <p style="background-color:hsla(198, 13%, 85%, 0.89); padding-left: 1%;">
     Reminder of Due Vaccines
   </p>
@@ -41,6 +42,7 @@
         
         <div class="row g-0">
             <div class="col-sm-6 col-md-8">
+                <div style="height: 300px; overflow: auto">
             <table  class="table table-striped table-hover" style="width: 80%; margin-left: auto; margin-right: auto; ">
                         
                 <tr>
@@ -59,7 +61,7 @@
                     <td> <a href="{% url 'reminder-vaccines' patient.id %}" >{{patient.bday|date:"m/d/Y"}}</a></td>
                     <td> <form action="{% url 'send-email-reminder' patient.id %}" method="post">
                         {% csrf_token %}
-                        <button id="submit_button" type="submit" class="btn btn-sm btn-success" style="margin:auto; display: block;">
+                        <button id="submit_btn" type="submit" class="btn btn-sm btn-success" style="margin:auto; display: block;">
                             <i class="fas fa-envelope-square"></i>
                         Send email reminder
                     </button>
@@ -68,6 +70,19 @@
                 </tr>
                 {% endfor %}
             </table>
+            </div>
+            <!-- <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+                <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
+                  <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+                </symbol>
+            </svg>
+            <div id="alert" class="alert alert-success d-flex align-items-center alert-dismissible fade show" role="alert">
+                <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Success:"><use xlink:href="#check-circle-fill"/></svg>
+                <div>
+                  An example success alert with an icon
+                  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            </div> -->
             </div>
 
             <!-- <br> <br> -->
@@ -94,5 +109,13 @@
 </div>  
 </div> 
 </div>
+<!-- <script>
+    document.getElementById("alert").style.display = none
+    document.getElementById("submit_btn").addEventListener("click", displayAlert);
+    function displayAlert() {
+        document.getElementById("alert").display()
+    }
+
+</script> -->
 
 {% endblock %}
