auto compute age while creation/update

--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/update-patient-profile.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/update-patient-profile.html
@@ -45,9 +45,9 @@
                     <td class="table-warning">Sex:<span style="color: red;">*</span></td>
                     <td class="table-light">{{ form.gender }}</td>
                     <td class="table-warning">Date of Birth:<span style="color: red;">*</span></td>
-                    <td class="table-light" colspan="3">{{ form.bday }}</td>
-                    <td class="table-warning"></td>
-                    <td class="table-warning" colspan="3">{{ age }}</td>
+                    <td class="table-light" colspan="3" onchange="format()">{{ form.bday }}</td>
+                    <td class="table-warning">Age</td>
+                    <td class="table-warning" colspan="3" id='age'></td>
                   </tr>
                   <tr>
                     <td class="table-warning"><b>CONTACT #</b></td>
@@ -128,6 +128,7 @@
                 </table>
               </div>
               <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                <a href="{% url 'patient-profile' record.pk %}"><button type="button" class="btn btn-secondary" data-bs-dismiss="modal"><i class="fas fa-times"></i> Cancel</button></a>
                 <button id="submit_button" type="submit" class="btn btn-success"><i class="fas fa-save"></i> Save</button>
               </div>
               </form>
@@ -143,5 +144,135 @@
           {% else %}
           {{message | striptags}}
           {% endif %} {% endfor %}
+
+          <script>
+            // --Age format--
+            function format(){
+              //collect input from HTML form and convert into date format
+              var userinput = document.getElementById("dob").value;
+              var dob = new Date(userinput);
+              
+              //extract the year, month, and date from user date input
+              var dobYear = dob.getYear();
+              var dobMonth = dob.getMonth();
+              var dobDate = dob.getDate();
+              
+              //get the current date from the system
+              var now = new Date();
+              //extract the year, month, and date from current date
+              var currentYear = now.getYear();
+              var currentMonth = now.getMonth();
+              var currentDate = now.getDate();
+            
+              //declare a variable to collect the age in year, month, and days
+              var age = {};
+              var ageString = "";
+            
+              //get years
+              yearAge = currentYear - dobYear;
+            
+              //get months
+              if (currentMonth >= dobMonth)
+                //get months when current month is greater
+                var monthAge = currentMonth - dobMonth;
+              else {
+                yearAge--;
+                var monthAge = 12 + currentMonth - dobMonth;
+              }
+          
+              //get weeks
+              var time_difference = now.getTime() - dob.getTime();  
+              var days_difference = time_difference / (1000 * 60 * 60 * 24);
+          
+              //get days
+              if (currentDate >= dobDate)
+                //get days when the current date is greater
+                var dateAge = currentDate - dobDate;
+              else {
+                monthAge--;
+                var dateAge = 31 + currentDate - dobDate;
+          
+                if (monthAge < 0) {
+                  monthAge = 11;
+                  yearAge--;
+                }
+              }
+              //group the age in a single variable
+              age = {
+              years: yearAge,
+              months: monthAge,
+              months1: Math.floor(days_difference/30.5),
+              weeks: Math.floor(days_difference/7),
+              days: dateAge
+              };
+              
+          
+              if(!isNaN(yearAge) && !isNaN(monthAge)){  
+                if ( (age.years > 0) && (age.months > 0) && (age.days > 0) ){
+                  if(age.months1 <= 18){
+                    ageString = age.months1 + " month/s"
+                  }
+                  else if(age.years >= 18){
+                    ageString = age.years + " year/s"
+                  }
+                  else
+                    ageString = age.years + " year/s " + age.months + " month/s";
+                }
+          
+                // same date, 1 y.o. <
+                else if ( (age.years > 0) && (age.months > 0) && (age.days == 0) )
+                  ageString = age.years + " year/s " + age.months + " month/s";
+                  
+                // 8 wks
+                else if ( (age.years == 0) && (age.months == 0) && (age.days > 0) ){
+                  if(age.days < 7)
+                    ageString = age.days + " day/s"
+                  else
+                    ageString = age.weeks + " week/s";
+                }
+                
+                // same month
+                else if ( (age.years > 0) && (age.months == 0) && (age.days > 0)){
+                  if(age.months1 <= 18){
+                    ageString = age.months1 + " month/s"
+                  }
+                  else if(age.years >= 18){
+                    ageString = age.years + " year/s"
+                  }
+                  else
+                    ageString = age.years + " year/s " + age.months + " month/s";
+                }
+                
+                // birthday
+                else if ( (age.years > 0) && (age.months == 0) && (age.days == 0) )  
+                  ageString = age.years +  " year/s. Birthday today"; 
+          
+                // before 1 y.o
+                else if ( (age.years == 0) && (age.months > 0) && (age.days > 0) ){
+                  if(age.weeks <= 8){
+                    ageString = age.weeks + " week/s"
+                  }
+                  else
+                    ageString = age.months + " month/s"
+                }
+                
+                // years and days
+                else if ( (age.years > 0) && (age.months == 0) && (age.days > 0) )
+                  ageString = age.years + " year/s";
+                
+                // before 1 y.o., same date, diff month
+                else if ( (age.years == 0) && (age.months > 0) && (age.days == 0) )
+                  ageString = age.months + " month/s";
+          
+              }
+              else ageString = " "; 
+          
+              //display the calculated age
+              return document.getElementById("age").innerHTML = ageString ; 
+                       
+            }
+          
+          </script>
+
 
 {%endblock%}
