--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/reset-password/password-reset-confirm.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/reset-password/password-reset-confirm.html
@@ -1,3 +1,4 @@
+{% extends 'vaccinerecordapp/navbar.html' %} 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 {% block content %}
 
@@ -10,7 +11,8 @@
         <p>Please enter your new password.</p>
         <form method="POST">
             {% csrf_token %}
-            {{ form|crispy }}                    
+            {{ form|crispy }}      
+            <br>              
             <button class="btn btn-primary" type="submit">Reset password</button>
         </form>
     </div>
