--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/reset-password/password-reset-done.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/reset-password/password-reset-done.html
@@ -3,9 +3,11 @@
 
 	<!--Password reset sent-->
 	<div class="container p-5">
-  	<h2 class="font-weight-bold mt-3">Password reset sent</h2>
+  	<h2 class="font-weight-bold mt-3">Password Reset Sent</h2>
 		<hr>
 		<p>We've emailed you instructions for resetting your password, if an account exists with the email you entered. You should receive them shortly.<br>If you don't receive an email, please make sure you've entered the address you registered with, and check your spam folder.</p>
-  </div>
+		<a href="{% url 'home' %}" class="btn btn-primary">Back to Site</a>
+	</div>
+  
 
 {% endblock %}
